[gd_scene load_steps=7 format=2]

[ext_resource path="res://LineEdit.gd" type="Script" id=1]
[ext_resource path="res://SOAL FIX/SMA/10.jpg" type="Texture" id=2]
[ext_resource path="res://assets/background/Ornamen Web/ornamen-07.png" type="Texture" id=3]
[ext_resource path="res://TCM_____ (1).TTF" type="DynamicFontData" id=4]
[ext_resource path="res://button.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="."]
margin_right = 2251.0
margin_bottom = 3391.0
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit10" type="LineEdit" parent="."]
margin_left = 584.0
margin_top = 408.0
margin_right = 726.0
margin_bottom = 432.0
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
caret_blink = true
caret_blink_speed = 0.25
script = ExtResource( 1 )

[node name="Soal" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 112.0
margin_right = 838.0
margin_bottom = 188.0
rect_scale = Vector2( 1.5, 3 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 416.0
margin_top = 408.0
margin_right = 518.0
margin_bottom = 435.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "JAWABAN"

[node name="Button10" parent="." instance=ExtResource( 5 )]
margin_left = 480.0
margin_top = 504.0
margin_right = 712.0
margin_bottom = 600.0

[connection signal="text_changed" from="LineEdit10" to="LineEdit10" method="_on_LineEdit10_text_changed"]
[connection signal="pressed" from="Button10" to="Button10" method="_on_Button10_pressed"]
