[gd_scene load_steps=8 format=2]

[ext_resource path="res://LineEdit.gd" type="Script" id=1]
[ext_resource path="res://SOAL FIX/SMA/3.jpg" type="Texture" id=2]
[ext_resource path="res://assets/background/Ornamen Web/ornamen-07.png" type="Texture" id=3]
[ext_resource path="res://button.tscn" type="PackedScene" id=4]
[ext_resource path="res://TCM_____ (1).TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="."]
margin_right = 2251.0
margin_bottom = 3391.0
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 584.0
margin_top = 416.0
margin_right = 726.0
margin_bottom = 440.0
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
caret_blink = true
caret_blink_speed = 0.25
script = ExtResource( 1 )

[node name="Soal" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1176.0
margin_top = 120.0
margin_right = -402.0
margin_bottom = -434.0
rect_scale = Vector2( 1.4, 1.5 )
texture = ExtResource( 2 )

[node name="Button3" parent="." instance=ExtResource( 4 )]
margin_left = 896.0
margin_top = 384.0
margin_right = 1128.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 464.0
margin_top = 416.0
margin_right = 566.0
margin_bottom = 443.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "JAWABAN"

[connection signal="text_changed" from="LineEdit3" to="LineEdit3" method="_on_LineEdit3_text_changed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_Button3_pressed"]
