[gd_scene load_steps=7 format=2]

[ext_resource path="res://LineEdit.gd" type="Script" id=1]
[ext_resource path="res://SOAL FIX/SMA/4.jpg" type="Texture" id=2]
[ext_resource path="res://assets/background/Ornamen Web/ornamen-07.png" type="Texture" id=3]
[ext_resource path="res://button.tscn" type="PackedScene" id=4]
[ext_resource path="res://TCM_____ (1).TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="."]
margin_right = 2251.0
margin_bottom = 3391.0
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit4" type="LineEdit" parent="."]
margin_left = 536.0
margin_top = 496.0
margin_right = 678.0
margin_bottom = 520.0
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
caret_blink = true
caret_blink_speed = 0.25
script = ExtResource( 1 )

[node name="Soal" type="TextureRect" parent="."]
margin_left = 192.0
margin_top = 32.0
margin_right = 972.0
margin_bottom = 383.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Button4" parent="." instance=ExtResource( 4 )]
margin_left = 880.0
margin_top = 464.0
margin_right = 1112.0
margin_bottom = 560.0

[node name="Label" type="Label" parent="."]
margin_left = 416.0
margin_top = 496.0
margin_right = 518.0
margin_bottom = 523.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "JAWABAN"

[connection signal="text_changed" from="LineEdit4" to="LineEdit4" method="_on_LineEdit4_text_changed"]
[connection signal="pressed" from="Button4" to="Button4" method="_on_Button4_pressed"]
