[gd_scene load_steps=7 format=2]

[ext_resource path="res://LineEdit.gd" type="Script" id=1]
[ext_resource path="res://SOAL FIX/SMA/5.jpg" type="Texture" id=2]
[ext_resource path="res://assets/background/Ornamen Web/ornamen-07.png" type="Texture" id=3]
[ext_resource path="res://ButtonPress.gd" type="Script" id=4]
[ext_resource path="res://TCM_____ (1).TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="."]
margin_right = 2251.0
margin_bottom = 3391.0
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit5" type="LineEdit" parent="."]
margin_left = 288.0
margin_top = 432.0
margin_right = 388.0
margin_bottom = 456.0
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
caret_blink = true
caret_blink_speed = 0.25
script = ExtResource( 1 )

[node name="Soal" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -320.0
margin_right = 264.0
margin_bottom = -96.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Button5" type="Button" parent="."]
margin_left = 696.0
margin_top = 400.0
margin_right = 928.0
margin_bottom = 496.0
text = "SUBMIT"
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 176.0
margin_top = 432.0
margin_right = 278.0
margin_bottom = 459.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "JAWABAN"

[connection signal="text_changed" from="LineEdit5" to="LineEdit5" method="_on_LineEdit5_text_changed"]
[connection signal="pressed" from="Button5" to="Button5" method="_on_Button5_pressed"]
