[gd_scene load_steps=7 format=2]

[ext_resource path="res://LineEdit.gd" type="Script" id=1]
[ext_resource path="res://SOAL FIX/SMA/7.jpg" type="Texture" id=2]
[ext_resource path="res://assets/background/Ornamen Web/ornamen-07.png" type="Texture" id=3]
[ext_resource path="res://button.tscn" type="PackedScene" id=4]
[ext_resource path="res://TCM_____ (1).TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="."]
margin_right = 2251.0
margin_bottom = 3391.0
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LineEdit7" type="LineEdit" parent="."]
margin_left = 648.0
margin_top = 432.0
margin_right = 790.0
margin_bottom = 456.0
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
caret_blink = true
caret_blink_speed = 0.25
script = ExtResource( 1 )

[node name="Soal" type="TextureRect" parent="."]
margin_left = 160.0
margin_top = 144.0
margin_right = 934.0
margin_bottom = 301.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 488.0
margin_top = 432.0
margin_right = 590.0
margin_bottom = 459.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "JAWABAN"

[node name="Button7" parent="." instance=ExtResource( 4 )]
margin_left = 560.0
margin_top = 512.0
margin_right = 792.0
margin_bottom = 608.0

[connection signal="text_changed" from="LineEdit7" to="LineEdit7" method="_on_LineEdit7_text_changed"]
[connection signal="pressed" from="Button7" to="Button7" method="_on_Button7_pressed"]
